force-app/main/default/objects/Store_IA_Account__c/Store_IA_Account__c.object-meta.xml
<CustomObject>
    <description>Object for Red Wing Store and IA Account relationships.  When a Red Wing Store creates a new IA account a record is inserted into this object via APEX.
Object Type: IA
Integrated: N</description>
    <label>Store IA Account</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Store IA Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store IA Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>