force-app/main/default/objects/Store_IA_Account__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If primary is checked (TRUE) this is first Red Wing Store to create this Industrial Account.  Populated via APEX.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>If primary is checked (TRUE) this is first Red Wing Store to create this Industrial Account. Populated via APEX.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>