force-app/main/default/objects/Store_IA_Account__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Red Wing Store Account (Account Object).  Used to associate an IA Account with a Red Wing Store Account. Populated via APEX.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Lookup to a Red Wing Store Account (Account Object).  Used to associate an IA Account with a Red Wing Store Account. Populated via APEX.</inlineHelpText>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store IA Account</relationshipLabel>
    <relationshipName>Store_IA_Account_del1</relationshipName>
    <type>Lookup</type>
</CustomField>